<resources>
    <string name="app_name">jennifer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_id">5cf72f7e</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="main_guide_parallax">引导页视差滚动</string>
    <string name="main_web">WebView</string>
    <string name="guide_start">立即体验</string>
    <string name="environment_net">网络测试</string>
    <string name="environment_net_hss">双师服务</string>
    <string name="environment_net_wl">平台接口服务</string>
    <string name="environment_net_audio">音频服务</string>
    <string name="environment_mic">麦克风测试</string>
    <string name="environment_speaker">扬声器测试</string>
    <string name="palette_paint">画笔</string>
    <string name="palette_paint_red">红色画笔</string>
    <string name="palette_eraser">橡皮擦</string>
    <string name="speech">语音识别</string>
    <string name="ai_speech_start">长按说话</string>
    <string name="ai_speech_up">手指上滑，取消发送</string>
    <string name="ai_speech_cancel">松开手指，取消发送</string>
    <string name="ai_speech_send">松开结束</string>

    <string name="notification_title">通知栏</string>
    <string name="notification_start">开始</string>
    <string name="notification_pause">暂停</string>
    <string name="notification_stop">结束</string>

    <string-array name="main_guide">
        <item>引导页视差滚动</item>
        <item>WebView</item>
        <item>画板</item>
        <item>环境测试</item>
        <item>腾讯云视频</item>
        <item>Activity生命周期</item>
        <item>RecyclerView嵌套RadioButton</item>
        <item>语音识别</item>
        <item>VideoView</item>
        <item>通知栏</item>
        <item>SLPLoginActivity</item>
        <item>绘制矩形+倒三角+阴影</item>
        <item>TabLayout+ViewPager</item>
        <item>吸顶+字母定位效果</item>
        <item>识别二维码</item>
        <item>跳转功能界面</item>
        <item>测试对象指向</item>
        <item>TextView加载H5带公式</item>
        <item>TouchEvent TextView冲突事件</item>
        <item>EditText图文混排</item>
    </string-array>
</resources>
