<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/size_15"
    tools:context=".ui.notification.NotificationActivity">

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/shape_radiu10_base"
        android:gravity="center"
        android:text="@string/notification_start"
        android:textColor="@color/base_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_radiu10_base"
        android:gravity="center"
        android:text="@string/notification_pause"
        android:textColor="@color/base_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_radiu10_base"
        android:gravity="center"
        android:text="@string/notification_stop"
        android:textColor="@color/base_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/shape_radiu10_base"
        android:gravity="center"
        android:text="+1"
        android:textColor="@color/base_color"
        android:textSize="20sp" />
</LinearLayout>